## Makefile.am -- Process this file with automake to produce a Makefile.in file.

nobase_include_HEADERS= TFEL/Macros.hxx                                                                              \
			TFEL/FSAlgorithm/swap_ranges.hxx		                                             \
			TFEL/FSAlgorithm/copy.hxx			                                             \
			TFEL/FSAlgorithm/generate.hxx		                                                     \
			TFEL/FSAlgorithm/inner_product.hxx		                                             \
			TFEL/FSAlgorithm/transform.hxx		                                                     \
			TFEL/FSAlgorithm/iota.hxx			                                             \
			TFEL/FSAlgorithm/min_element.hxx		                                             \
			TFEL/FSAlgorithm/max_element.hxx		                                             \
			TFEL/FSAlgorithm/FSAlgorithm.hxx		                                             \
			TFEL/FSAlgorithm/accumulate.hxx		                                                     \
			TFEL/FSAlgorithm/fill.hxx			                                             \
			TFEL/FSAlgorithm/for_each.hxx		                                                     \
			TFEL/FSAlgorithm/equal.hxx			                                             \
			TFEL/Material/OutOfBoundsPolicy.hxx	                                                     \
			TFEL/Material/MechanicalBehaviour.hxx	                                                     \
			TFEL/Material/Lame.hxx			                                                     \
			TFEL/Material/Hill.hxx			                                                     \
			TFEL/Material/Hill.ixx			                                                     \
			TFEL/Material/ThermalBehaviourData.hxx	                                                     \
			TFEL/Material/MaterialException.hxx	                                                     \
			TFEL/Material/IsotropicLinearFourierHookLaw.hxx                                              \
			TFEL/Material/MechanicalBehaviourTraits.hxx                                                  \
			TFEL/Material/ThermalBehaviour.hxx	                                                     \
			TFEL/Material/ModellingHypothesis.hxx                                                        \
			TFEL/Material/IsotropicLinearFourierLaw.hxx                                                  \
			TFEL/Material/ThermoMechanicalBehaviour.hxx                                                  \
			TFEL/Material/BoundsCheck.hxx                                                                \
			TFEL/Material/DDIF2Base.hxx                                                                  \
			TFEL/Material/DDIF2Base.ixx                                                                  \
			TFEL/Material/RambergOsgood.hxx                                                              \
			TFEL/Material/MetallicCFCSlidingSystems.hxx                                                  \
			TFEL/Material/MetallicCFCSlidingSystems.ixx                                                  \
			TFEL/Material/MetallicCFCGenericSlidingSystemsInteractionMatrix.hxx                          \
			TFEL/Material/MetallicCFCGenericSlidingSystemsInteractionMatrix.ixx                          \
			TFEL/Material/PolyCristalsSlidingSystems.hxx                                                 \
			TFEL/Material/PolyCristalsSlidingSystems.ixx                                                 \
			TFEL/Config/Internals/TFELTypesInternals.hxx	                                             \
			TFEL/Config/Internals/SpatialGradType.hxx	                                             \
			TFEL/Config/Internals/HeatFluxVectorType.hxx	                                             \
			TFEL/Config/Internals/InvJacobianType.hxx	                                             \
			TFEL/Config/Internals/PositionType.hxx	                                                     \
			TFEL/Config/Internals/JacobianType.hxx	                                                     \
			TFEL/Config/Internals/ThermalConductivityMatrixType.hxx                                      \
			TFEL/Config/TFEL_MATH_Config.hxx		                                             \
			TFEL/Config/TFELTypes.hxx			                                             \
			TFEL/Config/TFELConfig.hxx			                                             \
			TFEL/TypeTraits/Promote/Promote.ixx		                                             \
			TFEL/TypeTraits/AbsType.hxx			                                             \
			TFEL/TypeTraits/BaseType.hxx			                                             \
			TFEL/TypeTraits/RealPartType.hxx		                                             \
			TFEL/TypeTraits/IsFundamentalNumericType.hxx	                                             \
			TFEL/TypeTraits/IsReal.hxx			                                             \
			TFEL/TypeTraits/IsScalar.hxx			                                             \
			TFEL/TypeTraits/IsComplex.hxx		                                                     \
			TFEL/TypeTraits/Promote.hxx			                                             \
			TFEL/TypeTraits/IsAssignableTo.hxx		                                             \
			TFEL/TypeTraits/IsUnaryOperator.hxx		                                             \
			TFEL/TypeTraits/IsSafelyReinterpretCastableTo.hxx                                            \
			TFEL/TypeTraits/IsInvalid.hxx		                                                     \
			TFEL/TypeTraits/IsTemporary.hxx		                                                     \
			TFEL/TypeTraits/IsRandomAccessIterator.hxx	                                             \
			TFEL/Math/power.hxx                                                                          \
			TFEL/Math/power.ixx                                                                          \
			TFEL/Math/Discretization1D.hxx                                                               \
			TFEL/Math/Discretization1D.ixx                                                               \
			TFEL/Math/Forward/qt.hxx                                                                     \
			TFEL/Math/Forward/array.hxx                                                                  \
			TFEL/Math/Forward/vector.hxx                                                                 \
			TFEL/Math/Forward/matrix.hxx                                                                 \
			TFEL/Math/Forward/lambda.hxx                                                                 \
			TFEL/Math/Forward/Complex.hxx                                                                \
			TFEL/Math/Forward/tvector.hxx                                                                \
			TFEL/Math/Forward/tmatrix.hxx                                                                \
			TFEL/Math/Forward/tensor.hxx                                                                 \
			TFEL/Math/Forward/stensor.hxx                                                                \
			TFEL/Math/Forward/st2tost2.hxx                                                               \
			TFEL/Math/Forward/Function.hxx                                                               \
			TFEL/Math/Forward/ArrayConcept.hxx                                                           \
			TFEL/Math/Forward/LambdaConcept.hxx                                                          \
			TFEL/Math/Forward/VectorConcept.hxx                                                          \
			TFEL/Math/Forward/MatrixConcept.hxx                                                          \
			TFEL/Math/Forward/StensorConcept.hxx                                                         \
			TFEL/Math/Forward/ST2toST2Concept.hxx                                                        \
			TFEL/Math/Forward/CompositeConcept.hxx                                                       \
			TFEL/Math/Forward/TinyNewtonRaphson.hxx                                                      \
			TFEL/Math/Forward/FunctionConcept.hxx                                                        \
			TFEL/Math/Forward/ExpressionTemplates.hxx                                                    \
			TFEL/Math/General/Forward/General.hxx                                                        \
			TFEL/Math/Bindings/atlas.hxx                                                                 \
			TFEL/Math/Parser/BinaryFunction.hxx					                     \
			TFEL/Math/Parser/EvaluatorBase.hxx 					                     \
			TFEL/Math/Parser/Negation.hxx					                             \
			TFEL/Math/Parser/BinaryFunction.ixx					                     \
			TFEL/Math/Parser/Expr.hxx          					                     \
			TFEL/Math/Parser/Number.hxx						                     \
			TFEL/Math/Parser/BinaryOperator.hxx					                     \
			TFEL/Math/Parser/BinaryOperator.ixx					                     \
			TFEL/Math/Parser/Function.hxx      					                     \
			TFEL/Math/Parser/Function.ixx      					                     \
			TFEL/Math/Parser/Variable.hxx				        	                     \
			TFEL/Math/Parser/ExternalCFunction.hxx                                                       \
			TFEL/Math/Parser/ExternalCastemFunction.hxx                                                  \
			TFEL/Math/Parser/ExternalFunction.hxx                                                        \
			TFEL/Math/Parser/ConstantExternalFunction.hxx                                                \
			TFEL/Math/Parser/ExternalFunctionManager.hxx                                                 \
			TFEL/Math/Parser/ExternalFunctionExpr.hxx                                                    \
			TFEL/Math/Parser/ExternalFunctionExpr2.hxx                                                   \
			TFEL/Math/Parser/DifferentiatedFunctionExpr.hxx                                              \
			TFEL/Math/Parser/KrigedFunction.hxx                                                          \
			TFEL/Math/Parser/KrigedFunction.ixx                                                          \
			TFEL/Math/Parser/EvaluatorTExpr.hxx 					                     \
			TFEL/Math/Parser/EvaluatorTExpr.ixx 					                     \
			TFEL/Math/Parser/EvaluatorProxy.hxx                                                          \
			TFEL/Math/Parser/EvaluatorProxy.ixx                                                          \
			TFEL/Math/Parser/IntegerEvaluatorTExpr.hxx				                     \
			TFEL/Math/Parser/LogicalExpr.hxx                                                             \
			TFEL/Math/Parser/LogicalExpr.ixx                                                             \
			TFEL/Math/Parser/ConditionalExpr.hxx                                                         \
			TFEL/Math/Parser/EvaluatorFunction.hxx                                                       \
			TFEL/Math/Parser/EvaluatorFunction.ixx                                                       \
			TFEL/Math/Evaluator.hxx 						                     \
			TFEL/Math/Evaluator.ixx 						                     \
			TFEL/Math/IntegerEvaluator.hxx 						                     \
			TFEL/Math/CubicSpline.hxx					                             \
			TFEL/Math/CubicSpline.ixx					                             \
			TFEL/Math/Kriging.hxx						                             \
			TFEL/Math/Kriging1D.hxx						                             \
			TFEL/Math/Kriging2D.hxx						                             \
			TFEL/Math/Kriging3D.hxx						                             \
			TFEL/Math/FactorizedKriging.hxx			        		                     \
			TFEL/Math/FactorizedKriging1D1D.hxx			        	                     \
			TFEL/Math/FactorizedKriging1D2D.hxx			        	                     \
			TFEL/Math/FactorizedKriging1D3D.hxx			                                     \
			TFEL/Math/Kriging/KrigingUtilities.hxx				                             \
			TFEL/Math/Kriging/KrigingPieceWiseLinearModel1D.hxx                                          \
			TFEL/Math/Kriging/KrigingDefaultModel1D.hxx				                     \
			TFEL/Math/Kriging/Kriging.ixx				          	                     \
			TFEL/Math/Kriging/KrigingErrors.hxx					                     \
			TFEL/Math/Kriging/KrigingDefaultNuggetModel.hxx			                             \
			TFEL/Math/Kriging/FactorizedKriging.ixx				                             \
			TFEL/Math/Kriging/KrigingVariable.hxx				                             \
			TFEL/Math/Kriging/KrigingDefaultModel3D.hxx				                     \
			TFEL/Math/Kriging/KrigingDefaultModels.hxx				                     \
			TFEL/Math/Kriging/KrigingDefaultModel2D.hxx				                     \
			TFEL/Math/LUSolve.hxx		                                                             \
			TFEL/Math/LU/LUException.hxx		                                                     \
			TFEL/Math/LU/Permutation.hxx                                                                 \
			TFEL/Math/LU/Permutation.ixx                                                                 \
			TFEL/Math/LU/TinyPermutation.hxx                                                             \
			TFEL/Math/LU/TinyPermutation.ixx                                                             \
			TFEL/Math/LU/TinyMatrixSolve.ixx		                                             \
			TFEL/Math/LU/LUDecomp.hxx			                                             \
			TFEL/Math/QR/QRDecomp.hxx			                                             \
			TFEL/Math/QR/QRDecomp.ixx			                                             \
			TFEL/Math/QR/QRException.hxx			                                             \
			TFEL/Math/Newton-Raphson/TinyNewtonRaphson.ixx                                               \
			TFEL/Math/RungeKutta/RungeKutta2.ixx		                                             \
			TFEL/Math/RungeKutta/RungeKutta4.ixx		                                             \
			TFEL/Math/RungeKutta/RungeKutta42.ixx		                                             \
			TFEL/Math/RungeKutta/RungeKutta54.ixx		                                             \
			TFEL/Math/Tensor/tensor.ixx								     \
			TFEL/Math/Tensor/tensorResultType.hxx							     \
			TFEL/Math/Tensor/TensorChangeBasis.hxx							     \
			TFEL/Math/Tensor/TensorExpr.hxx								     \
			TFEL/Math/Tensor/TensorConcept.hxx							     \
			TFEL/Math/Tensor/TensorConcept.ixx							     \
			TFEL/Math/Tensor/TensorSizeToDime.hxx							     \
			TFEL/Math/Tensor/TensorConceptOperations.hxx						     \
			TFEL/Math/Tensor/TensorConceptOperations.ixx						     \
			TFEL/Math/Tensor/TVFS.hxx								     \
			TFEL/Math/Tensor/TFTV.hxx								     \
			TFEL/Math/Tensor/TFTMRV.hxx								     \
			TFEL/Math/Tensor/TFTMRV2.hxx								     \
			TFEL/Math/Tensor/TFTMCV2.hxx								     \
			TFEL/Math/Tensor/TFTMCV.hxx								     \
			TFEL/Math/Stensor/Internals/StensorChangeBasis.hxx                                           \
			TFEL/Math/Stensor/Internals/StensorExport.hxx                                                \
			TFEL/Math/Stensor/Internals/StensorExport.ixx                                                \
			TFEL/Math/Stensor/Internals/StensorComputeEigenValues.hxx                                    \
			TFEL/Math/Stensor/Internals/StensorComputeEigenVectors.hxx                                   \
			TFEL/Math/Stensor/Internals/StensorImport.hxx                                                \
			TFEL/Math/Stensor/StensorConcept.hxx		                                             \
			TFEL/Math/Stensor/StensorNullStorage.hxx	                                             \
			TFEL/Math/Stensor/StensorConcept.ixx		                                             \
			TFEL/Math/Stensor/stensor.ixx		                                                     \
			TFEL/Math/Stensor/StensorExternalTabStorage.hxx                                              \
			TFEL/Math/Stensor/StensorConceptOperations.hxx                                               \
			TFEL/Math/Stensor/StensorConceptOperations.ixx                                               \
			TFEL/Math/Stensor/StensorStaticStorage.hxx	                                             \
			TFEL/Math/Stensor/StensorSizeToDime.hxx	                                                     \
			TFEL/Math/Stensor/StensorExpr.hxx		                                             \
			TFEL/Math/Stensor/StensorExternalVoigtStorage.hxx                                            \
			TFEL/Math/Stensor/stensorResultType.hxx	                                                     \
			TFEL/Math/Stensor/SFTMCV.hxx                                                                 \
			TFEL/Math/Stensor/SFTMCV2.hxx                                                                \
			TFEL/Math/Stensor/SFTMRV.hxx                                                                 \
			TFEL/Math/Stensor/SFTMRV2.hxx                                                                \
			TFEL/Math/Stensor/SFTV.hxx                                                                   \
			TFEL/Math/Vector/tvectorResultType.hxx	                                                     \
			TFEL/Math/Vector/tvector.ixx			                                             \
			TFEL/Math/Vector/VectorConcept.hxx		                                             \
			TFEL/Math/Vector/VectorUtilities.hxx		                                             \
			TFEL/Math/Vector/VectorConcept.ixx		                                             \
			TFEL/Math/Vector/VectorExpr.hxx		                                                     \
			TFEL/Math/Vector/vector.ixx			                                             \
			TFEL/Math/Vector/VectorConceptOperations.hxx	                                             \
			TFEL/Math/Vector/VectorConceptOperations.ixx	                                             \
			TFEL/Math/Vector/vectorResultType.hxx	                                                     \
			TFEL/Math/Vector/Range.hxx			                                             \
			TFEL/Math/Vector/VectorVectorDotProduct.hxx                                                  \
			TFEL/Math/Vector/TVFTV.hxx                                                                   \
			TFEL/Math/Vector/TSFTV.hxx                                                                   \
			TFEL/Math/matrix.hxx                 	                                                     \
			TFEL/Math/Matrix/TinyMatrixInvert.ixx	                                                     \
			TFEL/Math/Matrix/tmatrixResultType.hxx	                                                     \
			TFEL/Math/Matrix/tmatrix.ixx			                                             \
			TFEL/Math/Matrix/tmatrix_column_view.hxx				                     \
			TFEL/Math/Matrix/tmatrix_column_view.ixx				                     \
			TFEL/Math/Matrix/tmatrix_const_column_view.hxx				                     \
			TFEL/Math/Matrix/tmatrix_const_column_view.ixx				                     \
			TFEL/Math/Matrix/tmatrix_const_row_view.hxx				                     \
			TFEL/Math/Matrix/tmatrix_const_row_view.ixx				                     \
			TFEL/Math/Matrix/tmatrix_row_view.hxx					                     \
			TFEL/Math/Matrix/tmatrix_row_view.ixx					                     \
			TFEL/Math/Matrix/tmatrix_submatrix_view.hxx				                     \
			TFEL/Math/Matrix/tmatrix_submatrix_view.ixx				                     \
			TFEL/Math/Matrix/tmatrix_const_submatrix_view.hxx				             \
			TFEL/Math/Matrix/tmatrix_const_submatrix_view.ixx				             \
			TFEL/Math/Matrix/matrix.ixx			                                             \
			TFEL/Math/Matrix/MatrixConcept.hxx		                                             \
			TFEL/Math/Matrix/MatrixUtilities.hxx		                                             \
			TFEL/Math/Matrix/MatrixConcept.ixx		                                             \
			TFEL/Math/Matrix/MatrixExpr.hxx		                                                     \
			TFEL/Math/Matrix/MatrixConceptOperations.hxx                                                 \
			TFEL/Math/Matrix/MatrixConceptOperations.ixx                                                 \
			TFEL/Math/Matrix/TMatrixTVectorExpr.hxx                                                      \
			TFEL/Math/Matrix/TVectorTMatrixExpr.hxx                                                      \
			TFEL/Math/General/FracSimplify.hxx                                                           \
			TFEL/Math/General/FracSimplify.ixx		                                             \
			TFEL/Math/General/LogicalOperations.hxx                                                      \
			TFEL/Math/General/StorageTraits.hxx	                                                     \
			TFEL/Math/General/AbsCompare.hxx	                                                     \
			TFEL/Math/General/Abs.hxx      	                                                             \
			TFEL/Math/General/Abs.ixx      	                                                             \
			TFEL/Math/General/BaseCast.hxx                                                               \
			TFEL/Math/General/CubicRoots.hxx                                                             \
			TFEL/Math/General/floating_point_exceptions.hxx                                              \
			TFEL/Math/General/ResultType.hxx		                                             \
			TFEL/Math/General/RunTimeCheck.hxx		                                             \
			TFEL/Math/General/BasicOperations.hxx	                                                     \
			TFEL/Math/General/DotProduct.hxx		                                             \
			TFEL/Math/General/EmptyRunTimeProperties.hxx	                                             \
			TFEL/Math/General/ComputeUnaryResult.hxx	                                             \
			TFEL/Math/General/ComputeBinaryResult.hxx	                                             \
			TFEL/Math/General/UnaryResultType.hxx	                                                     \
			TFEL/Math/General/ComputeObjectTag.ixx	                                                     \
			TFEL/Math/General/ComputeObjectTag.hxx	                                                     \
			TFEL/Math/General/Complex.hxx		                                                     \
			TFEL/Math/General/Complex.ixx		                                                     \
			TFEL/Math/General/ObjectObjectRandomAccessConstIterator.hxx                                  \
			TFEL/Math/General/NegObjectRandomAccessConstIterator.hxx                                     \
			TFEL/Math/General/ScalarObjectRandomAccessConstIterator.hxx	                             \
			TFEL/Math/General/ScalarObjectRandomAccessConstIteratorSpecialisation.hxx                    \
			TFEL/Math/General/FctObjectRandomAccessConstIterator.hxx	                             \
			TFEL/Math/General/ObjectObjectRandomAccessConstIteratorSpecialisation.hxx                    \
			TFEL/Math/ExpressionTemplates/FctMathObjectExpr.hxx					     \
			TFEL/Math/ExpressionTemplates/FctMathObjectExprWithoutConstIterator.hxx			     \
			TFEL/Math/ExpressionTemplates/MathObjectMathObjectDiadicProductExpr.hxx			     \
			TFEL/Math/ExpressionTemplates/MathObjectMathObjectExpr.hxx				     \
			TFEL/Math/ExpressionTemplates/MathObjectMathObjectExprSpecialisation.ixx		     \
			TFEL/Math/ExpressionTemplates/MathObjectMathObjectExprWithoutConstIterator.hxx		     \
			TFEL/Math/ExpressionTemplates/MathObjectMathObjectExprWithoutConstIteratorSpecialisation.ixx \
			TFEL/Math/ExpressionTemplates/MathObjectNegExpr.hxx					     \
			TFEL/Math/ExpressionTemplates/MathObjectNegExprWithoutConstIterator.hxx			     \
			TFEL/Math/ExpressionTemplates/ScalarMathObjectExpr.hxx					     \
			TFEL/Math/ExpressionTemplates/ScalarMathObjectExprSpecialisation.ixx			     \
			TFEL/Math/ExpressionTemplates/ScalarMathObjectExprWithoutConstIterator.hxx		     \
			TFEL/Math/ExpressionTemplates/ScalarMathObjectExprWithoutConstIteratorSpecialisation.ixx     \
			TFEL/Math/General/RandomRotationMatrix.hxx                                                   \
			TFEL/Math/Quantity/qtOperations.ixx		                                             \
			TFEL/Math/Quantity/qtSamples.hxx		                                             \
			TFEL/Math/Quantity/qtSpecific.hxx		                                             \
			TFEL/Math/Quantity/Unit.hxx			                                             \
			TFEL/Math/Quantity/Unit.ixx			                                             \
			TFEL/Math/Quantity/qt.ixx			                                             \
			TFEL/Math/Quantity/qtLimits.hxx                                                              \
			TFEL/Math/Quantity/qtOperations.hxx                                                          \
			TFEL/Math/Array/Internals/ArraySerialize.hxx	                                             \
			TFEL/Math/Array/arrayResultType.hxx                                                          \
			TFEL/Math/Array/ArrayExpr.hxx	                                                             \
			TFEL/Math/Array/array.ixx		                                                     \
			TFEL/Math/Array/ArrayRefCountedStorage.hxx	                                             \
			TFEL/Math/Array/ArrayRowMajorStorage.hxx                                                     \
			TFEL/Math/Array/ArrayRowMajorStorage.ixx                                                     \
			TFEL/Math/Array/ArrayConcept.hxx	                                                     \
			TFEL/Math/Array/ArrayConcept.ixx	                                                     \
			TFEL/Math/Array/ArrayConceptOperations.hxx                                                   \
			TFEL/Math/Array/ArrayRunTimeProperties.hxx	                                             \
			TFEL/Math/Array/ArrayRunTimeProperties.ixx	                                             \
			TFEL/Math/Array/ArrayStorage.hxx                                                             \
			TFEL/Math/Array/ArrayStorage.ixx                                                             \
			TFEL/Math/qt.hxx				                                             \
			TFEL/Math/TinyNewtonRaphson.hxx		                                                     \
			TFEL/Math/RungeKutta2.hxx			                                             \
			TFEL/Math/RungeKutta4.hxx			                                             \
			TFEL/Math/RungeKutta42.hxx			                                             \
			TFEL/Math/RungeKutta54.hxx			                                             \
			TFEL/Math/array.hxx				                                             \
			TFEL/Math/TinyMatrixSolve.hxx		                                                     \
			TFEL/Math/TinyMatrixInvert.hxx		                                                     \
			TFEL/Math/tvector.hxx			                                                     \
			TFEL/Math/tmatrix.hxx			                                                     \
			TFEL/Math/stensor.hxx			                                                     \
			TFEL/Math/tensor.hxx			                                                     \
			TFEL/Math/vector.hxx				                                             \
			TFEL/Math/MathException.hxx			                                             \
			TFEL/Math/Function/Id.hxx                                                                    \
			TFEL/Math/Function/StandardFunctions.hxx	                                             \
			TFEL/Math/Function/FunctionConcept.hxx	                                                     \
			TFEL/Math/Function/FunctionConcept.ixx	                                                     \
			TFEL/Math/Function/FunctionExpr.hxx		                                             \
			TFEL/Math/Function/FunctionConceptOperations.hxx                                             \
			TFEL/Math/Function/FunctionFunctionExpr.hxx	                                             \
			TFEL/Math/Function/FunctionFunctionExpr.ixx	                                             \
			TFEL/Math/Function/ScalarFunctionExpr.hxx                                                    \
			TFEL/Math/Function/ScalarFunctionExpr.ixx                                                    \
			TFEL/Math/Function/FunctionScalarExpr.hxx	                                             \
			TFEL/Math/Function/FunctionScalarExpr.ixx	                                             \
			TFEL/Math/Function/FunctionsCompositionExpr.hxx                                              \
			TFEL/Math/Function/FunctionsCompositionExpr.ixx                                              \
			TFEL/Math/Function/FunctionNegExpr.hxx                                                       \
			TFEL/Math/Function/FunctionNegExpr.ixx                                                       \
			TFEL/Math/Function/Power.hxx                                                                 \
			TFEL/Math/Function/Cst.hxx	                                                             \
			TFEL/Math/Function/Cst.ixx	                                                             \
			TFEL/Math/Function/Power.ixx                                                                 \
			TFEL/Math/LambdaExpression/LambdaConcept.hxx	                                             \
			TFEL/Math/LambdaExpression/LambdaConcept.ixx	                                             \
			TFEL/Math/LambdaExpression/LambdaConceptOperations.hxx                                       \
			TFEL/Math/LambdaExpression/lambda.ixx	                                                     \
			TFEL/Math/LambdaExpression/ScalarLambdaExpr.hxx                                              \
			TFEL/Math/LambdaExpression/LambdaLambdaExpr.hxx                                              \
			TFEL/Math/LambdaExpression/LambdaLambdaExpr.ixx                                              \
			TFEL/Math/LambdaExpression/LambdaScalarExpr.hxx                                              \
			TFEL/Math/LambdaExpression/ScalarLambdaExpr.ixx                                              \
			TFEL/Math/LambdaExpression/LambdaScalarExpr.ixx                                              \
			TFEL/Math/LambdaExpression/FctLambdaExpr.hxx                                                 \
			TFEL/Math/LambdaExpression/FctLambdaExpr.ixx                                                 \
			TFEL/Math/LambdaExpression/LambdaConceptOperations.ixx	                                     \
			TFEL/Math/lambda.hxx				                                             \
			TFEL/Math/functions.hxx	                                	                             \
			TFEL/Math/st2tost2.hxx                                                                       \
			TFEL/Math/ST2toST2/st2tost2.ixx                                                              \
			TFEL/Math/ST2toST2/ST2toST2Concept.hxx                                                       \
			TFEL/Math/ST2toST2/ST2toST2Concept.ixx                                                       \
			TFEL/Math/ST2toST2/ST2toST2ConceptOperations.hxx                                             \
			TFEL/Math/ST2toST2/ST2toST2Expr.hxx                                                          \
			TFEL/Math/ST2toST2/st2tost2ResultType.hxx                                                    \
			TFEL/Math/ST2toST2/ST2toST2FTMV.hxx                                                          \
			TFEL/Math/ST2toST2/ST2toST2FTMV2.hxx                                                         \
			TFEL/Math/composite.hxx                                                                      \
			TFEL/Math/Composite/CompositeCompositeExpr.hxx                                               \
			TFEL/Math/Composite/CompositeConceptOperations.ixx                                           \
			TFEL/Math/Composite/CompositeNegExpr.hxx                                                     \
			TFEL/Math/Composite/FctCompositeExpr.hxx                                                     \
			TFEL/Math/Composite/CompositeConcept.hxx                                                     \
			TFEL/Math/Composite/CompositeExpr.hxx                                                        \
			TFEL/Math/Composite/compositeResultType.ixx                                                  \
			TFEL/Math/Composite/ScalarCompositeExpr.hxx                                                  \
			TFEL/Math/Composite/composite.ixx                                                            \
			TFEL/Math/Composite/CompositeScalarExpr.hxx                                                  \
			TFEL/Math/Broyden.hxx                                                                        \
			TFEL/Math/Broyden2.hxx                                                                       \
			TFEL/Math/RootFinding/Broyden.ixx                                                            \
			TFEL/Math/RootFinding/Broyden2.ixx                                                           \
			TFEL/Math/LevenbergMarquardt.hxx                                                             \
			TFEL/Math/LevenbergMarquardt/LevenbergMarquardt.ixx                                          \
			TFEL/Math/LevenbergMarquardt/LevenbergMarquardtFunctionWrapper.hxx                           \
			TFEL/Math/LevenbergMarquardt/LevenbergMarquardtFunctionWrapper.ixx                           \
			TFEL/Math/LevenbergMarquardt/LevenbergMarquardtEvaluatorWrapper.hxx                          \
			TFEL/Math/LevenbergMarquardt/LevenbergMarquardtExternalFunctionWrapper.hxx                   \
			TFEL/Math/FSLevenbergMarquardt.hxx                                                           \
			TFEL/Math/LevenbergMarquardt/FSLevenbergMarquardt.ixx                                        \
			TFEL/Metaprogramming/Forward/TypeList.hxx                                                    \
			TFEL/Metaprogramming/GenerateTypeList.ixx                                                    \
			TFEL/Metaprogramming/StaticAssert.hxx                                                        \
			TFEL/Metaprogramming/IsConvertibleTo.hxx                                                     \
			TFEL/Metaprogramming/Implements.hxx	                                                     \
			TFEL/Metaprogramming/TypeList.hxx	                                                     \
			TFEL/Metaprogramming/IF.hxx		                                                     \
			TFEL/Metaprogramming/TypeList.ixx                                                            \
			TFEL/Metaprogramming/IntToType.hxx                                                           \
			TFEL/Metaprogramming/IsSubClassOf.hxx	                                                     \
			TFEL/Metaprogramming/IsSameType.hxx                                                          \
			TFEL/Metaprogramming/IsReference.hxx                                                         \
			TFEL/Metaprogramming/IsPointer.hxx                                                           \
			TFEL/Metaprogramming/EnableIf.hxx	                                                     \
			TFEL/Metaprogramming/IsSuperClassOf.hxx                                                      \
			TFEL/Metaprogramming/GenerateTypeList.hxx                                                    \
			TFEL/Metaprogramming/InvalidType.hxx	                                                     \
			TFEL/Metaprogramming/RemoveConstness.hxx                                                     \
			TFEL/Metaprogramming/RemoveReference.hxx                                                     \
			TFEL/Metaprogramming/HasIterator.hxx	                                                     \
			TFEL/Metaprogramming/HasConstIterator.hxx                                                    \
			TFEL/Metaprogramming/HasRandomAccessConstIterator.hxx	                                     \
			TFEL/Metaprogramming/EmptyClass.hxx    	                                                     \
			TFEL/Metaprogramming/HasRandomAccessIterator.hxx                                             \
			TFEL/System/RecursiveFind.hxx                                                                \
			TFEL/System/ExternalFunctionsPrototypes.hxx                                                  \
			TFEL/System/ExternalLibraryManager.hxx                                                       \
			TFEL/System/ProcessManager.h                                                                 \
			TFEL/System/ProcessManager.hxx                                                               \
			TFEL/System/SignalHandler.ixx                                                                \
			TFEL/System/SystemError.hxx                                                                  \
			TFEL/System/System.hxx                                                                       \
			TFEL/System/SignalHandler.hxx                                                                \
			TFEL/System/SignalManager.hxx                                                                \
			TFEL/System/SystemError.ixx                                                                  \
			TFEL/System/ChildProcess.hxx						                     \
			TFEL/System/BinaryRead.hxx						                     \
			TFEL/System/BinaryWrite.hxx						                     \
			TFEL/System/STLContainerBinaryRead.hxx				                             \
			TFEL/System/STLContainerBinaryWrite.hxx				                             \
			TFEL/System/stream_traits.hxx                                                                \
			TFEL/System/basic_rstream.hxx                                                                \
			TFEL/System/basic_rstream.ixx                                                                \
			TFEL/System/basic_wstream.hxx                                                                \
			TFEL/System/basic_wstream.ixx                                                                \
			TFEL/System/rstreamView.hxx                                                                  \
			TFEL/System/rstreamView.ixx                                                                  \
			TFEL/System/wstreamView.hxx                                                                  \
			TFEL/System/wstreamView.ixx                                                                  \
			TFEL/System/rfstream.hxx                                                                     \
			TFEL/System/wfstream.hxx                                                                     \
			TFEL/System/getFunction.h                                                                    \
			TFEL/Utilities/ArgumentParserBase.hxx                                                        \
			TFEL/Utilities/ArgumentParserBase.ixx                                                        \
			TFEL/Utilities/CxxKeywords.hxx                                                               \
			TFEL/Utilities/CxxTokenizer.hxx                                                              \
			TFEL/Utilities/CxxTokenizer.ixx                                                              \
		 	TFEL/Utilities/Token.hxx                                                                     \
			TFEL/Utilities/ContainerRebind.hxx                                                           \
			TFEL/Utilities/MultipleDequeVector/MultipleDequeVector.hxx	                             \
			TFEL/Utilities/MultipleDequeVector/TypeTransform.hxx                                         \
			TFEL/Utilities/MultipleDequeVector/TypeTransform.ixx                                         \
			TFEL/Utilities/MultipleDequeVector/MultipleDequeVectorIterators.ixx	                     \
			TFEL/Utilities/MultipleDequeVector/MultipleDequeVector.ixx	                             \
			TFEL/Utilities/NewAllocator.hxx	                                                             \
			TFEL/Utilities/ToString.hxx		                                                     \
			TFEL/Utilities/ToString.ixx		                                                     \
			TFEL/Utilities/SmartPtr.hxx		                                                     \
			TFEL/Utilities/Info.hxx		                                                             \
			TFEL/Utilities/TerminalColors.hxx	                                                     \
			TFEL/Utilities/IntegersSet.hxx	                                                             \
			TFEL/Utilities/MultipleVector.hxx	                                                     \
			TFEL/Utilities/MultipleDeque.hxx	                                                     \
			TFEL/Utilities/Name.hxx		                                                             \
			TFEL/Utilities/Name.ixx			                                                     \
			TFEL/Utilities/GenTypeCastError.hxx	                                                     \
			TFEL/Utilities/GenTypeBase.hxx	                                                             \
			TFEL/Utilities/GenTypeBase.ixx	                                                             \
			TFEL/Utilities/GenTypeSpecialisation.ixx                                                     \
			TFEL/Utilities/RecursiveUnion.hxx		                                             \
			TFEL/Utilities/MallocAllocator.hxx                                                           \
			TFEL/Utilities/Tuple.hxx   	                                                             \
			TFEL/Utilities/Tuple.ixx                                                                     \
			TFEL/Utilities/TextData.hxx                                                                  \
			TFEL/Utilities/StringAlgorithms.hxx                                                          \
			TFEL/Tests/MultipleTestOutputs.hxx					                     \
			TFEL/Tests/StdStreamTestOutput.hxx					                     \
			TFEL/Tests/XMLTestOutput.hxx					                             \
			TFEL/Tests/Test.hxx							                     \
			TFEL/Tests/TestCase.hxx							                     \
			TFEL/Tests/TestFunctionWrapper.hxx					                     \
			TFEL/Tests/TestFunctionWrapper.ixx					                     \
			TFEL/Tests/TestManager.hxx						                     \
			TFEL/Tests/TestOutput.hxx						                     \
			TFEL/Tests/TestProxy.hxx						                     \
			TFEL/Tests/TestProxy.ixx						                     \
			TFEL/Tests/TestResult.hxx						                     \
			TFEL/Tests/TestSuite.hxx						                     \
			TFEL/Exception/TFELException.hxx 

EXTRA_DIST = CMakeLists.txt