EXTRA_DIST = autotools.cmake               \
	     compiler.cmake                \
	     clang.cmake                   \
	     gcc.cmake                     \
	     intel.cmake                   \
	     pathscale.cmake               \
	     msvc.cmake                    \
	     aster.cmake                   \
	     zset.cmake                    \
	     castem.cmake                  \
	     castem-unix-type.cmake        \
	     cyrano.cmake                  \
	     common-compiler-flags.cmake   \
	     gnu-fortran-compiler.cmake    \
	     OptimizeForArchitecture.cmake \
	     tfel.cmake                    \
	     ieee754.cmake                 \
	     latex.cmake                   \
	     cadna.cmake                   \
	     pandoc.cmake                  \
	     CppCheckTargets.cmake         \
	     FindCppCheck.cmake            \
	     FindCppCheck.cpp
