if(TFEL_APPEND_VERSION)
  install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html
    DESTINATION share/doc/tfel-${TFEL_VERSION}
    COMPONENT doxygen)
else(TFEL_APPEND_VERSION)
  install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION share/doc/tfel
    COMPONENT doxygen)
endif(TFEL_APPEND_VERSION)